package com.erasmus.notification;

public interface Observer {
    void update(String message);
}
